Fix release compile build and errors while uploading to Play Store
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/VSExam/src/main/res/values/strings.xml
+++ b/VSExam/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- untranslated -->
-    <string name="two_dash">--</string>
+    <string name="two_dash" translatable="false">--</string>
 
     <string name="app_name">VSExam</string>
     <string name="action_settings">Settings</string>
