Display ProgressDialog when registering to exam
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/VSExam/src/main/res/values-cs/strings.xml
+++ b/VSExam/src/main/res/values-cs/strings.xml
@@ -139,4 +139,6 @@ Za způsobené komplikace se omlouváme.</string>
     <string name="settings_auto_calendar_title">Přidávat do kalendaře</string>
     <string name="settings_auto_calendar_summary">Vaše zkoušky budou automaticky přidány do vašeho kalendáře při zapsání</string>
 
+    <string name="in_progress">Probíhá&#8230;</string>
+
 </resources>
