--- a/VSExam/src/main/res/values/strings.xml
+++ b/VSExam/src/main/res/values/strings.xml
@@ -2,43 +2,31 @@
 <resources>
 
     <string name="two_dash" translatable="false">--</string>
-
     <string name="app_name">VSExam</string>
     <string name="action_settings">Settings</string>
-
     <string name="registered">Registered</string>
     <string name="unregistered">Not registered</string>
-
     <string name="menu_refresh_exams">Refresh exams</string>
     <string name="menu_json_format">Get JSON format</string>
-
     <string name="into_file">Save to file</string>
     <string name="logo">Logo</string>
-
     <string name="group_title_is_registered">Registered</string>
     <string name="group_title_to_be_registered">Will be registered</string>
     <string name="group_title_can_register">Can register</string>
     <string name="group_title_can_not_register">Cannot register</string>
-
     <string name="register">Register</string>
     <string name="unregister">Log off</string>
     <string name="register_asap">Schedule registration</string>
     <string name="cancel_register_asap">Cancel scheduled registration</string>
-
     <string name="nth_semester_study_plan_string">%1$d. semester, study plan %2$s</string>
-
     <string name="form_full_time">Full-time study</string>
     <string name="form_combined">Combined study</string>
     <string name="form_distance">Distance study</string>
-
     <string name="exam_output">Exam output</string>
     <string name="successfully_saved_into_file">Successfully save into file.</string>
-
     <string name="unknown_action">Unknown action</string>
-    <string name="loading_with_ellipsis">Loading&#8230;</string>
-
+    <string name="loading_with_ellipsis">Loading…</string>
     <string name="progress_structure_number_format">%1$d out of %2$d checked</string>
-
     <string name="data_downloaded">Data loaded</string>
     <string name="structure_downloaded_saved">New structure was successfully downloaded and saved.</string>
     <string name="last_update_on_x">Last update on %1$s.</string>
@@ -59,19 +47,17 @@
 Please note, that your device must be turned on around the time of registration, and that this feature might not guarantee registration on selected exam (especially if school server is under heavy load).</string>
     <string name="processing_data">Processing data</string>
     <string name="downloading_exams">Downloading exams</string>
-    <string name="no_network_connection_title">No network connection</string>!!!
-    <string name="no_network_connection_message">To be able to use this app properly, you need to connect your device to the internet.
+    <string name="no_network_connection_title">No network connection</string>
+!!!    <string name="no_network_connection_message">To be able to use this app properly, you need to connect your device to the internet.
 Please do so and try this again.</string>
     <string name="network_error_exams_title">Network error</string>
     <string name="network_error_exams_message">Could not download exam list from system ISIS. This is probably due to poor network connection.
 Do you want to try again?</string>
-
     <string name="input_xname">User name (x-name)</string>
     <string name="input_password">Password</string>
     <string name="login_condition_xname">Input your valid x-name.</string>
     <string name="login_condition_password">Input your valid password.</string>
     <string name="login">Login</string>
-
     <string name="notification_register_start_title">Registration start</string>
     <string name="notification_register_start_message">Registration of the exam %1$s will start in a few seconds.
 Please note, that keeping your device still may improve your chances to be successful.</string>
@@ -84,10 +70,8 @@ Please note, that keeping your device still may improve your chances to be succe
     <string name="notification_register_failure_message">Unfortunately registration of the exam %1$s failed.
 Heavy load of school servers have caused wrong evaluation of registration requests.
 We apologize for any damage caused.</string>
-
     <string name="registration_soon_message">Exam will be registered in a few seconds</string>
     <string name="registration_in_x">Exam will be registered in %1$s</string>
-
     <string name="student_profile_title">Student profile</string>
     <string name="faculty">Faculty</string>
     <string name="study_type">Study type</string>
@@ -106,11 +90,9 @@ We apologize for any damage caused.</string>
     <string name="register_end">Registration until</string>
     <string name="unregister_end">Logging off until</string>
     <string name="classmates">Classmates</string>
-
     <string name="always">Always</string>
     <string name="when_offline">When not active</string>
     <string name="never">Never</string>
-
     <string name="settings_register_notification_title">Register notifications</string>
     <string name="settings_register_notification_dialog">When notify</string>
     <string name="settings_log_off_title">Log off</string>
@@ -121,26 +103,24 @@ We apologize for any damage caused.</string>
     <string name="settings_view_summary">Advanced. Displays school study structure in JSON format.</string>
     <string name="settings_refresh_data_title">Reload study structure</string>
     <string name="settings_refresh_data_summary">Study structure will be downloaded again from VŠE pages.</string>
-
     <string name="event_created">Event was added to your calendar</string>
     <string name="event_deleted">Event was removed from your calendar</string>
-
     <string name="now">Now</string>
     <string name="registration">Registration</string>
     <string name="registration_dates">Registration dates</string>
     <string name="capacity_free">Free capacity</string>
     <string name="capacity_occupied">Occupied capacity</string>
     <string name="capacity_total">Total capacity</string>
-
     <string name="following_events">Following events</string>
     <string name="registering_starts">Registering starts</string>
     <string name="unregistering_ends">Logging off ends</string>
     <string name="registering_ends">Registering ends</string>
     <string name="exam_date">Exam date</string>
-
     <string name="settings_auto_calendar_title">Add to calendar</string>
     <string name="settings_auto_calendar_summary">All exams will be automatically added to your calendar when registered</string>
+    <string name="in_progress">In progress…</string>
+    <string name="update_in_progress">Aktualizácia prebieha …</string>
+    <string name="title_activity_examless">ExamlessActivity</string>
+    <string name="hello_world">Hello world!</string>
 
-    <string name="in_progress">In progress&#8230;</string>
-    <string name="update_in_progress">Aktualizácia prebieha &#8230;</string>
 </resources>
